data/derived/comb/progs/unify/prog3412.ml.out
Characters 29-52:
  let fixpoint (f,b) = wwhile ((if ((f b) = b) then b), b);;
                               ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit but an expression was expected of type
         'a -> 'a * bool
